--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,17 +13,25 @@
     "tauri:dev": "tauri dev"
   },
   "dependencies": {
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-tabs": "^1.1.0",
     "autoprefixer": "^10.4.20",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "framer-motion": "^11.3.5",
+    "lucide-react": "^0.446.0",
     "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.2.1"
+    "react-icons": "^5.2.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@tauri-apps/cli": "^1.6.1",
     "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/react": "^18.3.10",
     "@types/react-dom": "^18",
     "concurrently": "^9.0.1",
     "eslint": "^8",
