--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,11 +20,12 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.5",
-    "lucide-react": "^0.446.0",
+    "lucide-react": "^0.447.0",
     "next": "^14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "recharts": "^2.12.7",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
