--- a/mobile/package.json
+++ b/mobile/package.json
@@ -9,10 +9,13 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo-google-fonts/nunito": "^0.2.3",
     "@expo/vector-icons": "^13.0.0",
+    "@expo/webpack-config": "^19.0.0",
     "@react-navigation/drawer": "^6.7.2",
     "@react-navigation/native": "^6.1.18",
     "expo": "~49.0.0",
+    "expo-font": "~11.4.0",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
     "react-dom": "^18.3.1",
